<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLtest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete">削除</string>
    <string name="update">更新</string>
    <string name="english">英語</string>
    <string name="japanese">国語</string>
    <string name="math">数学</string>
    <string name="sum_label">3教科合計</string>
    <string name="sum_text"></string>
    <string name="average_label">平均点</string>
    <string name="average_text"></string>
    <string name="all_cnt_label">登録件数</string>
    <string name="all_cnt_text"></string>
    <string name="all_average_label">全平均</string>
    <string name="all_average_text"></string>
    <string name="student">生徒</string>
    <string name="regist">新規登録</string>
    <string name="no_data">データが登録されていません</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="name">氏名</string>
    <string name="reload">再読込</string>    
    <string name="back">戻る</string>
</resources>